--- a/Resources/Prototypes/_Impstation/CosmicCult/God/cosmicgod.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/God/cosmicgod.yml
@@ -84,6 +84,7 @@
     follow: true
     location: The Unknown
   - type: CosmicTest
+    corruptionCooldown: 0.1
   - type: AmbientSound
     enabled: true
     volume: 0
