--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/monument.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/monument.yml
@@ -8,7 +8,7 @@
   name: The Monument
   description: A great slab of unknowledge, only visible to those aware of it. Built of a thousand little nothings, its surface reflects a starless emptiness...
   components:
-  - type: CosmicItem
+  - type: CosmicMarkStructure
   - type: CosmicMonument
   - type: SpriteFade
   - type: Sprite
