--- a/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/roundstart.yml
@@ -1,6 +1,6 @@
 - type: entity
   parent: BaseGameRule
-  id: CosmicCult
+  id: GameRuleCosmicCult
   components:
   - type: CosmicCultRule
   - type: GameRule
@@ -21,23 +21,25 @@
       fallbackRoles: [ CosmicAntagCultist ]
       min: 1
       max: 1
-      playerRatio: 15
       blacklist:
         components:
         - AntagImmune
+        - BibleUser
       components:
       - type: CosmicCult
       - type: CosmicCultLead
       mindRoles:
       - MindRoleCosmicCult
     - prefRoles: [ CosmicAntagCultist ]
-      min: 3
-      max: 5
-      playerRatio: 15
+      fallbackRoles: [ CosmicAntagLeader ]
+      min: 2
+      max: 4
+      playerRatio: 10
       lateJoinAdditional: true
       blacklist:
         components:
         - AntagImmune
+        - BibleUser
       components:
       - type: CosmicCult
       mindRoles:
