Small refactor & corrections & tidy-up

--- a/Resources/Prototypes/_Impstation/CosmicCult/polymorphs.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/polymorphs.yml
@@ -88,6 +88,7 @@
     energy: 12
     color: "#42a4ae"
     castShadows: false
+  - type: CosmicMarkLapse
   - type: LightBehaviour
     behaviours:
      - !type:FadeBehaviour
