--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -15,6 +15,10 @@
   name: lathe-category-mechs
 
 - type: latheCategory
+  id: Modules
+  name: lathe-category-modules
+
+- type: latheCategory
   id: Parts
   name: lathe-category-parts
 
