--- a/Resources/Prototypes/Recipes/Lathes/robotics.yml
+++ b/Resources/Prototypes/Recipes/Lathes/robotics.yml
@@ -18,6 +18,7 @@
   abstract: true
   parent: BaseRoboticsRecipe
   id: BaseBorgModuleRecipe
+  category: Modules
   completetime: 3
   materials:
     Steel: 250
