--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -47,3 +47,25 @@
 - type: latheCategory
   id: Materials
   name: lathe-category-materials
+
+# Uniform
+
+- type: latheCategory
+  id: Carpet
+  name: lathe-category-carpet
+
+- type: latheCategory
+  id: Coat
+  name: lathe-category-coat
+
+- type: latheCategory
+  id: Hat
+  name: lathe-category-hat
+
+- type: latheCategory
+  id: Jumpsuit
+  name: lathe-category-jumpsuit
+
+- type: latheCategory
+  id: Neck
+  name: lathe-category-neck
