--- a/Resources/Prototypes/Recipes/Lathes/clothing.yml
+++ b/Resources/Prototypes/Recipes/Lathes/clothing.yml
@@ -3,6 +3,7 @@
 - type: latheRecipe
   abstract: true
   id: BaseJumpsuitRecipe
+  category: Jumpsuit
   completetime: 4
   materials:
     Cloth: 300
@@ -18,6 +19,7 @@
 - type: latheRecipe
   abstract: true
   id: BaseCoatRecipe
+  category: Coat
   completetime: 3.2 # don't ask why its faster than a jumpsuit??
   materials:
     Cloth: 500
@@ -34,6 +36,7 @@
 - type: latheRecipe
   abstract: true
   id: BaseHatRecipe
+  category: Hat
   completetime: 2
   materials:
     Cloth: 100
@@ -41,6 +44,7 @@
 - type: latheRecipe
   abstract: true
   id: BaseCarpetRecipe
+  category: Carpet
   completetime: 1
   materials:
     Cloth: 100
@@ -56,6 +60,7 @@
 - type: latheRecipe
   abstract: true
   id: BaseNeckClothingRecipe
+  category: Neck
   completetime: 2
   materials:
     Cloth: 200
