--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -59,6 +59,10 @@
   name: lathe-category-coat
 
 - type: latheCategory
+  id: Command
+  name: lathe-category-command
+
+- type: latheCategory
   id: Hat
   name: lathe-category-hat
 
