vfx polish pass, Blank ability polish & cosmicvoid pocket dimension

--- a/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Actions/cosmiccult.actions.yml
@@ -35,7 +35,7 @@
 - type: entity
   id: ActionCosmicBlank
   name: Blank Mentality
-  description: Shunt your target's mind out of their body and unto the darkness, rendering them temporarily mindless.
+  description: Shunt your target's mind out of their body and unto the cosmic dark, temporarily rendering their body mindless.
   categories: [ HideSpawnMenu ]
   components:
   - type: EntityTargetAction
