--- a/Resources/Prototypes/_Impstation/CosmicCult/Effects/effects.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Effects/effects.yml
@@ -6,14 +6,16 @@
     - type: WeaponArcVisuals
       fadeOut: false
     - type: Sprite
-      sprite: _Impstation/CosmicCult/Effects/weaponarcs.rsi
-      state: arc_cosmic
+      layers:
+      - sprite: _Impstation/CosmicCult/Effects/weaponarcs.rsi
+        state: arc_cosmic
+        shader: unshaded
     - type: TimedDespawn
       lifetime: 0.66
     - type: PointLight
-      color: "#43286a"
-      radius: 2.15
-      energy: 12
+      color: "#42a4ae"
+      radius: 1.5
+      energy: 6
       castShadows: false
     - type: LightBehaviour
       behaviours:
@@ -21,10 +23,11 @@
           interpolate: Linear
           minDuration: 0.64
           maxDuration: 0.65
-          startValue: 12.0
-          endValue: 0.0
+          startValue: 0.1
+          endValue: 6
           property: Energy
           enabled: true
+          reverseWhenFinished: true
 
 - type: entity
   categories: [ HideSpawnMenu ]
@@ -67,7 +70,7 @@
     mode: SnapgridCenter
   components:
   - type: TimedDespawn
-    lifetime: 0.5
+    lifetime: 1.75
   - type: Transform
     noRot: true
     anchored: true
@@ -78,3 +81,34 @@
       shader: unshaded
     netsync: false
     drawdepth: Mobs
+
+- type: entity
+  categories: [ HideSpawnMenu ]
+  id: CosmicBlankAbilityVFX
+  components:
+  - type: TimedDespawn
+    lifetime: 1.75
+  - type: Sprite
+    layers:
+    - sprite: _Impstation/CosmicCult/Effects/ability_blankvfx.rsi
+      state: vfx
+      shader: unshaded
+    netsync: false
+    drawdepth: Mobs
+  - type: PointLight
+    color: "#42a4ae"
+    radius: 1.5
+    energy: 4
+    castShadows: false
+  - type: LightBehaviour
+    behaviours:
+     - !type:FadeBehaviour
+       interpolate: Linear
+       minDuration: 1.75
+       maxDuration: 1.75
+       startValue: 0.1
+       endValue: 4
+       property: Energy
+       enabled: true
+       isLooped: true
+       reverseWhenFinished: true
