--- a/Resources/Prototypes/_Impstation/CosmicCult/Tileset/floors.yml
+++ b/Resources/Prototypes/_Impstation/CosmicCult/Tileset/floors.yml
@@ -53,6 +53,17 @@
     collection: FootstepCosmic
   heatCapacity: 10000
 
+- type: tile
+  id: FloorCosmicVoid
+  name: tiles-cosmiccult-floor-void
+  sprite: /Textures/_Impstation/CosmicCult/Tileset/cosmicfloor/floor_void.png
+  baseTurf: FloorGlass
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepCosmic
+  heatCapacity: 10000
+
 - type: entity
   id: FloorCosmicDecay
   name: entropic decay
@@ -136,3 +147,33 @@
     energy: 1.75
     castShadows: false
     color: "#42a4ae"
+
+- type: entity
+  id: FloorCosmicDecayAlt
+  suffix: DO NOT MAP
+  name: "???"
+  placement:
+    mode: SnapgridCenter
+    snap:
+    - Wall
+  components:
+  - type: FloorOccluder
+  - type: SpeedModifierContacts
+    walkSpeedModifier: 0.5
+    sprintSpeedModifier: 0.5
+  - type: Physics
+    bodyType: Static
+  - type: Transform
+    anchored: true
+  - type: SyncSprite
+  - type: Sprite
+    sprite: /Textures/_Impstation/CosmicCult/Tileset/cosmicdecayalt.rsi
+  - type: Icon
+    sprite: /Textures/_Impstation/CosmicCult/Tileset/cosmicdecayalt.rsi
+    state: full
+  - type: IconSmooth
+    key: floor
+    base: void
+  - type: Tag
+    tags:
+      - HideContextMenu
