--- a/Resources/Prototypes/Recipes/Lathes/cargo.yml
+++ b/Resources/Prototypes/Recipes/Lathes/cargo.yml
@@ -9,6 +9,7 @@
 - type: latheRecipe
   id: AppraisalTool
   result: AppraisalTool
+  category: Tools
   completetime: 4
   materials:
     Steel: 500
