--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -73,3 +73,55 @@
 - type: latheCategory
   id: Neck
   name: lathe-category-neck
+
+# new
+
+- type: latheCategory
+  id: Containers
+  name: lathe-category-containers
+
+- type: latheCategory
+  id: Clothing
+  name: lathe-category-clothing
+
+- type: latheCategory
+  id: Experimental
+  name: lathe-category-experimental
+
+- type: latheCategory
+  id: Tableware
+  name: lathe-category-tableware
+
+- type: latheCategory
+  id: Cookware
+  name: lathe-category-cookware
+
+- type: latheCategory
+  id: Medicinal
+  name: lathe-category-medicinal
+
+- type: latheCategory
+  id: Tiles
+  name: lathe-category-tiles
+
+# Cutter machine
+
+- type: latheCategory
+  id: Wood
+  name: lathe-category-wood
+
+- type: latheCategory
+  id: Concrete
+  name: lathe-category-concrete
+
+- type: latheCategory
+  id: Dark
+  name: lathe-category-dark
+
+- type: latheCategory
+  id: Steel
+  name: lathe-category-steel
+
+- type: latheCategory
+  id: White
+  name: lathe-category-white
