--- a/Resources/Prototypes/Recipes/Lathes/chemistry.yml
+++ b/Resources/Prototypes/Recipes/Lathes/chemistry.yml
@@ -1,6 +1,21 @@
+ # Base Prototypes
+
+- type: latheRecipe
+  abstract: true
+  id: BaseSyringeRecipe
+  category:
+    - Tools
+    - Containers
+  completetime: 2
+
+# Recipes
+
 - type: latheRecipe
   id: Beaker
   result: Beaker
+  category:
+    - Parts
+    - Containers
   completetime: 2
   materials:
     Glass: 100
@@ -8,6 +23,7 @@
 - type: latheRecipe
   id: LargeBeaker
   result: LargeBeaker
+  category: Containers
   completetime: 2
   materials:
     Glass: 200
@@ -15,31 +31,32 @@
 - type: latheRecipe
   id: CryostasisBeaker
   result: CryostasisBeaker
+  category: Containers
   completetime: 2
   materials:
     Steel: 250
     Plastic: 50
 
 - type: latheRecipe
+  parent: BaseSyringeRecipe
   id: SyringeCryostasis
   result: SyringeCryostasis
-  completetime: 2
   materials:
     Steel: 200
     Plastic: 50
 
 - type: latheRecipe
+  parent: BaseSyringeRecipe
   id: Dropper
   result: Dropper
-  completetime: 2
   materials:
     Glass: 200
     Plastic: 100
 
 - type: latheRecipe
+  parent: BaseSyringeRecipe
   id: Syringe
   result: Syringe
-  completetime: 2
   materials:
     Plastic: 100
     Steel: 25
@@ -47,6 +64,7 @@
 - type: latheRecipe
   id: BluespaceBeaker
   result: BluespaceBeaker
+  category: Containers
   completetime: 2
   materials:
     Steel: 500
@@ -55,9 +73,9 @@
     Silver: 50
 
 - type: latheRecipe
+  parent: BaseSyringeRecipe
   id: SyringeBluespace
   result: SyringeBluespace
-  completetime: 2
   materials:
     Steel: 100
     Plastic: 150
@@ -68,6 +86,7 @@
 - type: latheRecipe
   id: PillCanister
   result: PillCanister
+  category: Containers
   completetime: 2
   materials:
     Plastic: 100
@@ -75,6 +94,7 @@
 - type: latheRecipe
   id: ChemistryEmptyBottle01
   result: ChemistryEmptyBottle01
+  category: Containers
   completetime: 2
   materials:
     Glass: 50
@@ -100,6 +120,7 @@
 - type: latheRecipe
   id: ClothingEyesGlassesChemical
   result: ClothingEyesGlassesChemical
+  category: Clothing
   completetime: 2
   materials:
     Steel: 200
