--- a/Resources/Prototypes/Recipes/Lathes/tools.yml
+++ b/Resources/Prototypes/Recipes/Lathes/tools.yml
@@ -161,6 +161,7 @@
   parent: BaseToolRecipe
   id: UtilityBelt
   result: ClothingBeltUtility
+  category: Clothing
   materials:
     Cloth: 100
     Steel: 50
