--- a/Resources/Prototypes/Recipes/Lathes/janitorial.yml
+++ b/Resources/Prototypes/Recipes/Lathes/janitorial.yml
@@ -1,6 +1,7 @@
 - type: latheRecipe
   id: MopItem
   result: MopItem
+  category: Tools
   completetime: 2
   materials:
     Plastic: 100
@@ -8,6 +9,7 @@
 - type: latheRecipe
   id: MopBucket
   result: MopBucket
+  category: Containers
   completetime: 2
   materials:
     Steel: 100
@@ -16,6 +18,7 @@
 - type: latheRecipe
   id: Bucket
   result: Bucket
+  category: Containers
   completetime: 2
   materials:
     Plastic: 100
@@ -30,6 +33,9 @@
 - type: latheRecipe
   id: MegaSprayBottle
   result: MegaSprayBottle
+  category:
+    - Tools
+    - Containers
   completetime: 3
   materials:
     Plastic: 250
@@ -37,6 +43,9 @@
 - type: latheRecipe
   id: SprayBottle
   result: SprayBottle
+  category:
+    - Tools
+    - Containers
   completetime: 2
   materials:
     Plastic: 100
@@ -44,6 +53,9 @@
 - type: latheRecipe
   id: TrashBag
   result: TrashBag
+  category:
+    - Tools
+    - Containers
   completetime: 1.2
   materials:
     Plastic: 100
@@ -51,6 +63,9 @@
 - type: latheRecipe
   id: LightReplacer
   result: LightReplacerEmpty
+  category:
+    - Tools
+    - Lights
   completetime: 2.4
   materials:
     Steel: 100
@@ -59,6 +74,7 @@
 - type: latheRecipe
   id: Mousetrap
   result: Mousetrap
+  category: Weapons
   completetime: 1
   materials:
     Wood: 100
@@ -67,6 +83,7 @@
 - type: latheRecipe
   id: Holoprojector
   result: HoloprojectorEmpty
+  category: Tools
   completetime: 3
   materials:
     Plastic: 250
@@ -75,6 +92,7 @@
 - type: latheRecipe
   id: AdvMopItem
   result: AdvMopItem
+  category: Tools
   completetime: 2
   materials:
     Plastic: 400
@@ -84,6 +102,7 @@
 - type: latheRecipe
   id: Plunger
   result: Plunger
+  category: Tools
   completetime: 2
   materials:
     Plastic: 50
@@ -92,6 +111,7 @@
 - type: latheRecipe
   id: WeaponSprayNozzle
   result: WeaponSprayNozzle
+  category: Experimental
   completetime: 5
   materials:
     Steel: 1500
@@ -100,6 +120,7 @@
 - type: latheRecipe
   id: ClothingBackpackWaterTank
   result: ClothingBackpackWaterTank
+  category: Experimental
   completetime: 4
   materials:
     Steel: 250
