--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -125,3 +125,13 @@
 - type: latheCategory
   id: White
   name: lathe-category-white
+
+# SecTech
+
+- type: latheCategory
+  id: Magazines
+  name: lathe-category-magazines
+
+- type: latheCategory
+  id: Boxes
+  name: lathe-category-boxes
